Created floating aside; updated blog

--- a/index.html
+++ b/index.html
@@ -39,6 +39,25 @@
     </div>
   </nav>
 
+  <aside>
+    <div class="aside-info">
+      <h4>mattxmade</h4>
+      <p>Aspiring web developer, eletronics hobbyist</p>
+      <ul class="aside-buttons">
+        <li><button class="button follow">Follow</button></li>
+        <li><button class="button subscribe"><i class="fa fa-envelope-o" aria-hidden="true"></i></button></li>
+      </ul>
+    </div>
+    <ul class="notifications">
+      <li>cp</li>
+      <li>3.1k</li>
+      <li>sb</li>
+      <li>36</li>
+      <li class="white-background"><i class="fa fa-bookmark-o" aria-hidden="true"></i></li>
+    </ul>
+
+  </aside>
+
   <main>
     <article>
       <h1>January: My Code Journey</h1>
@@ -61,7 +80,7 @@
       </div>
 
       <img class="article-image" src="images/programming-3201149.png" alt="article-image">
-      <p class="article-image-credit">Photo by credit</p>
+      <p class="article-image-credit">Photo via pixabay</p>
 
       <p>This month saw me start my journey learning full stack developement through The Odin Project. 
         So far I have learnt how to write HTML CSS and some JavaScript. In taking up this curriculum, I also decided to commit
@@ -84,15 +103,14 @@
         good. I dabbled with HTML and CSS some years ago through
         Codecademy so I was somewhat familiar with the concepts.
         This was in 2015 and frameworks like bootstrap were
-        very popular (still is) as they made laying out a page easier.
+        very popular (still are) as they made laying out a page easier.
         I also recall using the CSS float property quite alot.
         Bringing things uptodate, the Flexbox module has been
-        a real standout so far and shows how much progress
-        been made since my learnings in 2015.</p>
+        a real standout.</p>
 
       <br>
 
-      <p>On being on Twitter and watching YouTube videos,
+      <p>Through watching YouTube videos and scrolling Twiiter,
         I'm also blown away by what others are designing
         purely with CSS. From 3D elements to complex
         recreations of handheld game consoles; some seriously
@@ -100,7 +118,7 @@
 
       <br>
 
-      <p>Around ten days in I completed The Odin Project recipe page 
+      <p>Around ten days into January I completed The Odin Project 'Recipes' page 
         project. In doing so I learned about GitHub, the
         command line, gitBash and whole myriad of other
         small things. Although the commands were somewhat
@@ -109,9 +127,37 @@
 
         <br>
 
-      <!-- <p>git add</p>
-      <p>git commit -m ""</p>
-      <p>git push</p> -->
+      <p>I have also completed the 'Landing Page' project which
+        saw me utilising the Flexbox module to layout a webpage
+        following instructuins from a brief. This was super enjoyable
+        and I found the challenge of getting things to look as close
+        as possible to the reference compelling.</p>
+
+      <p>The final big Odin related project was using what I had 
+        learned through the JavaScript fundamentals Odin Lessons
+        to build a Rock Paper Scissors game. This saw creating
+        functions, using let and const variables, returns,
+        conditionals, switch statements and operators (comparative and logical)
+        to build out the logic and flow of the game.
+      </p>
+
+      <p>After planning things out and writing some psuedo code, I 
+        the set about building everything up one function at a time,
+        making sure everything worked as I expected. I finshied the project
+        on 30th January 22 and very happy with it. I still need to iron
+        some bugs but as my first JavaScript program I am encouraged by the
+        outcome and feel more confident with the JavaScript language. I am
+        looking forward to returning to this to add a GUI through HTML + CSS. 
+      </p>
+
+      <p>Lastly as a method to reflect on my learning each month, I have started this blog.
+        My plan is to style each month's blog after notable websites. This month is
+        in the style of a medium article. This took a day or so to build out and my goal
+        with the blog series is to better my skills in HTML and CSS, picking up new skills as
+        I go.
+      </p>
+
+      <p>Thanks for checking this out, Matty</p>
 
     </article>
   </main>
