Added footer: updated icons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="left-items">
       <h2>mattxmade</h2>
       <ul class="author-info">
-        <li class="author-followers">142k Followers</li>
+        <li class="author-followers">10 Followers</li>
         <li>About</li>
       </ul>
       <ul class="author-buttons">
@@ -34,7 +34,7 @@
       <ul>
         <li><a href="#">Sign In</a></li>
         <li><button class="button get-started">Get started</button></li>
-        <li><a href="#"><i class="fa fa-rebel" aria-hidden="true"></i></a></li>
+        <li><a href="https://github.com/mattxmade"><i class="fa fa-github" aria-hidden="true"></i></a></li>
       </ul>
     </div>
   </nav>
@@ -49,10 +49,8 @@
       </ul>
     </div>
     <ul class="notifications">
-      <li>cp</li>
-      <li>3.1k</li>
-      <li>sb</li>
-      <li>36</li>
+      <li><i class="fa fa-heart-o" aria-hidden="true"></i><span>1</span></li>
+      <li><i class="fa fa-comment-o" aria-hidden="true"></i><span>0</span></li>
       <li class="white-background"><i class="fa fa-bookmark-o" aria-hidden="true"></i></li>
     </ul>
 
@@ -65,7 +63,7 @@
         <ul class="article-nav-left">
           <li><img class="pfp" src="" alt=""></li>
           <li>mattxmade</li>
-          <li>Jan 31</li>
+          <li>1st Feb</li>
           <li>.</li>
           <li>2 min read</li>
         </ul>
@@ -83,7 +81,7 @@
       <p class="article-image-credit">Photo via pixabay</p>
 
       <p>This month saw me start my journey learning full stack developement through The Odin Project. 
-        So far I have learnt how to write HTML CSS and some JavaScript. In taking up this curriculum, I also decided to commit
+        So far I have learnt how to write HTML CSS and some JavaScript. In taking up this curriculum I also decided to commit
         to the #100DaysOfCode challenge. This has entailed
         me tweeting daily about my progress. The idea is that
         by committing to the challenge, you hold yourself
@@ -92,8 +90,8 @@
         <br>
         
         <p>So far, so good and as of this writing, I am now on
-        day 31; having started on 1st January 2022.
-        I felt this was nessecary to undertake this challenge 
+        day 32; having started on 1st January 2022.
+        I felt it was nessecary to undertake this challenge 
         as I am not really one for publishing my work (or social media for that matter) so I thought it best
         to work on this painpoint as building on the web means being present on it.</p>
 
@@ -103,15 +101,15 @@
         good. I dabbled with HTML and CSS some years ago through
         Codecademy so I was somewhat familiar with the concepts.
         This was in 2015 and frameworks like bootstrap were
-        very popular (still are) as they made laying out a page easier.
+        very popular as they made laying out a page easier.
         I also recall using the CSS float property quite alot.
-        Bringing things uptodate, the Flexbox module has been
+        Bringing things up-to-date, the Flexbox module has been
         a real standout.</p>
 
       <br>
 
       <p>Through watching YouTube videos and scrolling Twiiter,
-        I'm also blown away by what others are designing
+        I've also blown away by what others are designing
         purely with CSS. From 3D elements to complex
         recreations of handheld game consoles; some seriously
         brilliant stuff!</p>
@@ -122,32 +120,32 @@
         project. In doing so I learned about GitHub, the
         command line, gitBash and whole myriad of other
         small things. Although the commands were somewhat
-        cumbersome for me at the start, they soon became
+        cumbersome for me at the start, they have now become
         reflex.</p>
 
         <br>
 
-      <p>I have also completed the 'Landing Page' project which
+      <p>I also completed the 'Landing Page' project which
         saw me utilising the Flexbox module to layout a webpage
-        following instructuins from a brief. This was super enjoyable
-        and I found the challenge of getting things to look as close
+        following instructuins from a brief. This was a super enjoyable
+        project and I found the challenge of getting things to look as close
         as possible to the reference compelling.</p>
 
-      <p>The final big Odin related project was using what I had 
+      <p>The final big Odin related project for this month was using what I had 
         learned through the JavaScript fundamentals Odin Lessons
-        to build a Rock Paper Scissors game. This saw creating
+        to build a Rock Paper Scissors game. This saw me creating
         functions, using let and const variables, returns,
         conditionals, switch statements and operators (comparative and logical)
         to build out the logic and flow of the game.
       </p>
 
       <p>After planning things out and writing some psuedo code, I 
-        the set about building everything up one function at a time,
+        set about building everything up one function at a time,
         making sure everything worked as I expected. I finshied the project
-        on 30th January 22 and very happy with it. I still need to iron
-        some bugs but as my first JavaScript program I am encouraged by the
+        on 30th January 2022 and I'm happy with it. I still need to iron
+        some bugs but as my first full JavaScript program I am encouraged by the
         outcome and feel more confident with the JavaScript language. I am
-        looking forward to returning to this to add a GUI through HTML + CSS. 
+        looking forward to returning to this to add a GUI using HTML + CSS. 
       </p>
 
       <p>Lastly as a method to reflect on my learning each month, I have started this blog.
@@ -157,10 +155,20 @@
         I go.
       </p>
 
-      <p>Thanks for checking this out, Matty</p>
+      <p>Thanks for checking this out, Matty.</p>
 
     </article>
   </main>
+
+  <footer>
+    <a href="https://github.com/mattxmade"><i class="fa fa-github" aria-hidden="true"></i></a>
+    <ul>
+      <li>About</li>
+      <li>Write</li>
+      <li>Help</li>
+      <li>Legal</li>
+    </ul>
+  </footer>
 
   <!-- 
   <h2>mattxmade</h2>
