Added links; replaced icons

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     </div>
   </nav>
 
+  <div class=box>
+    
+  </div>
+
   <aside>
     <div class="aside-info">
       <h4>mattxmade</h4>
@@ -61,11 +65,11 @@
       <h1>January: My Code Journey</h1>
       <div class="article-nav">
         <ul class="article-nav-left">
-          <li><img class="pfp" src="" alt=""></li>
-          <li>mattxmade</li>
+          <!-- <li><img class="pfp" src="" alt=""></li> -->
+          <li class="article-author">mattxmade</li>
           <li>1st Feb</li>
           <li>.</li>
-          <li>2 min read</li>
+          <li>3 min read</li>
         </ul>
         <ul class="article-nav-right">
           <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
