Added new classes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lora:ital@0;1&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital@0;1&family=Raleway:wght@400;600;700&family=Heebo:wght@900&display=swap" rel="stylesheet">
 
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -40,7 +40,7 @@
   </nav>
 
   <div class=box>
-    
+
   </div>
 
   <aside>
@@ -62,14 +62,14 @@
 
   <main>
     <article>
-      <h1>January: My Code Journey</h1>
+      <h1>January 2022: My Code Journey - A month in review</h1>
       <div class="article-nav">
         <ul class="article-nav-left">
           <!-- <li><img class="pfp" src="" alt=""></li> -->
-          <li class="article-author">mattxmade</li>
-          <li>1st Feb</li>
-          <li>.</li>
-          <li>3 min read</li>
+          <li class="article-author click"><h3>mattxmade</h3></li>
+          <li class="click">Feb 1</li>
+          <li class="click">.</li>
+          <li class="click">3 min read</li>
         </ul>
         <ul class="article-nav-right">
           <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
@@ -162,6 +162,21 @@
       <p>Thanks for checking this out, Matty.</p>
 
     </article>
+    <div class="bottom-interactions">
+      <ul class="notifications">
+        <li><i class="fa fa-heart-o click" aria-hidden="true"></i><span>1</span></li>
+        <li><i class="fa fa-comment-o click" aria-hidden="true"></i><span>0</span></li>
+        </ul>
+
+      <ul class="bottom-socials">
+        <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+        <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+        <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
+        <li><i class="fa fa-link" aria-hidden="true"></i></li>
+        <li class="white-background"><i class="fa fa-bookmark-o" aria-hidden="true"></i></li>
+        <li class="white-background"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></li>
+      </ul>
+    </div>
   </main>
 
   <footer>
