added links to projects

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <h1>January 2022: My Code Journey - A month in review</h1>
       <div class="article-nav">
         <ul class="article-nav-left">
-          <!-- <li><img class="pfp" src="" alt=""></li> -->
+          <li><img class="pfp" src="" alt=""></li>
           <li class="article-author click"><h3>mattxmade</h3></li>
           <li class="click">Feb 1</li>
           <li class="click">.</li>
@@ -84,7 +84,8 @@
       <img class="article-image" src="images/programming-3201149.png" alt="article-image">
       <p class="article-image-credit">Photo via pixabay</p>
 
-      <p>This month saw me start my journey learning full stack developement through The Odin Project. 
+      <p>This month saw me start my journey learning full stack developement through 
+        <a href ="https://www.theodinproject.com/" class="inline"><strong>The Odin Project</strong></a>. 
         So far I have learnt how to write HTML CSS and some JavaScript. In taking up this curriculum I also decided to commit
         to the #100DaysOfCode challenge. This has entailed
         me tweeting daily about my progress. The idea is that
@@ -127,17 +128,23 @@
         cumbersome for me at the start, they have now become
         reflex.</p>
 
-        <br>
+      <br>
+      <a target="_blank" href="https://mattxmade.github.io/odin-recipes/" class="inline align-middle">Delicious Recipes LIVE</a>
+      <br>
 
       <p>I also completed the 'Landing Page' project which
         saw me utilising the Flexbox module to layout a webpage
         following instructuins from a brief. This was a super enjoyable
         project and I found the challenge of getting things to look as close
-        as possible to the reference compelling.</p>
+        as possible to the reference compelling. I made my landing page theme around the RSPB</p>
+
+      <br>
+      <a  target="_blank" href="https://mattxmade.github.io/odin-landing-page/" class="inline align-middle">Landing Page LIVE</a>
+      <br>
 
       <p>The final big Odin related project for this month was using what I had 
         learned through the JavaScript fundamentals Odin Lessons
-        to build a Rock Paper Scissors game. This saw me creating
+        to build a Rock Paper Scissors game. This saw me writing
         functions, using let and const variables, returns,
         conditionals, switch statements and operators (comparative and logical)
         to build out the logic and flow of the game.
@@ -151,6 +158,10 @@
         outcome and feel more confident with the JavaScript language. I am
         looking forward to returning to this to add a GUI using HTML + CSS. 
       </p>
+
+      <br>
+      <a target="_blank" href="https://mattxmade.github.io/odin-rock-paper-scissors/" class="inline align-middle">Rock Paper Scissors LIVE</a>
+      <br>     
 
       <p>Lastly as a method to reflect on my learning each month, I have started this blog.
         My plan is to style each month's blog after notable websites. This month is
