disabled img tag for time being

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <h1>January 2022: My Code Journey - A month in review</h1>
       <div class="article-nav">
         <ul class="article-nav-left">
-          <li><img class="pfp" src="" alt=""></li>
+          <!-- <li><img class="pfp" src="" alt=""></li> -->
           <li class="article-author click"><h3>mattxmade</h3></li>
           <li class="click">Feb 1</li>
           <li class="click">.</li>
