Added container for article image and credit; new class

--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
         </ul>
       </div>
 
-      <img class="article-image" src="images/programming-3201149.png" alt="article-image">
-      <p class="article-image-credit">Photo via pixabay</p>
+      <div class="article-image-card">
+        <img src="images/programming-3201149.png" alt="article-image">
+        <p>Photo via pixabay</p>
+      </div>
 
       <p>This month saw me start my journey learning full stack developement through 
         <a href ="https://www.theodinproject.com/" class="inline"><strong>The Odin Project</strong></a>. 
