--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
       <ul>
         <li><a href="#">Sign In</a></li>
         <li><button class="button get-started">Get started</button></li>
-        <li><a href="https://github.com/mattxmade"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+        <!-- <li><a href="https://github.com/mattxmade"><i class="fa fa-github" aria-hidden="true"></i></a></li> -->
       </ul>
+      <a href="https://github.com/mattxmade"><i class="fa fa-github" aria-hidden="true"></i></a>
     </div>
   </nav>
 
