--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <br>
 
       <p>Through watching YouTube videos and scrolling Twiiter,
-        I've also blown away by what others are designing
+        I've also been blown away by what others are designing
         purely with CSS. From 3D elements to complex
         recreations of handheld game consoles; some seriously
         brilliant stuff!</p>
@@ -138,7 +138,7 @@
         saw me utilising the Flexbox module to layout a webpage
         following instructuins from a brief. This was a super enjoyable
         project and I found the challenge of getting things to look as close
-        as possible to the reference compelling. I made my landing page theme around the RSPB</p>
+        as possible to the reference compelling. I made my landing page theme around the RSPB.</p>
 
       <br>
       <a  target="_blank" href="https://mattxmade.github.io/odin-landing-page/" class="inline align-middle">Landing Page LIVE</a>
