--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         set about building everything up one function at a time,
         making sure everything worked as I expected. I finshied the project
         on 30th January 2022 and I'm happy with it. I still need to iron
-        some bugs but as my first full JavaScript program I am encouraged by the
+        out some bugs but as my first full JavaScript program I am encouraged by the
         outcome and feel more confident with the JavaScript language. I am
         looking forward to returning to this to add a GUI using HTML + CSS. 
       </p>
