--- a/02-month-in-review/02-feb-2022.html
+++ b/02-month-in-review/02-feb-2022.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/x-icon" href="02-month-in-review/images/favicon.ico">
-  <link rel="stylesheet" href="../02-month-in-review/styles/02-feb-2022.css">
+  <link rel="stylesheet" href="02-month-in-review/styles/02-feb-2022.css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <title>February: Month in Review</title>
 </head>
@@ -274,5 +274,5 @@
   </div>
   
 </body>
-<script src="../02-month-in-review/scripts/02-feb-2022.js"></script>
+<script src="02-month-in-review/scripts/02-feb-2022.js"></script>
 </html>
