--- a/02-feb-2022.html
+++ b/02-feb-2022.html
@@ -93,7 +93,7 @@
             <h1 class="thread-title">Month in Review: February 2022</h1>
             <p><button class="thread-button">Web Development</button></p>
 
-            <img class="thread-image" src="../02-month-in-review/images/programming-3201149.png" alt="illustration of mobile phone - the screen shows a html tag">
+            <img class="thread-image" src="02-month-in-review/images/programming-3201149.png" alt="illustration of mobile phone - the screen shows a html tag">
             <div class="thread-blog">
               <p class="single-space">Hi <span class="author">Matty</span> here, welcome to my month-in-review blog for Februray 2022!</p>
 
@@ -110,7 +110,7 @@
               </div>
 
               <h2 id="dom" class="jump-target"><a href="#dom">Document Object Model</a></h2>
-              <img class="image-embed" src="../02-month-in-review/images/day35_carbon.png" alt="JavaScript code">
+              <img class="image-embed" src="02-month-in-review/images/day35_carbon.png" alt="JavaScript code">
 
               <p class="double-space">The early part of Febraury saw me working through various JavaScript lessons. DOM (Document Object Model) maniplulation had just been introduced
               and I was a little bewildered at first. After tackling the JavaScript30 Drum Kit exercise my understanding grew on how things connected together. 
@@ -119,7 +119,7 @@
 
 
               <h2 id="rps" class="jump-target" ><a href="#rps">Rock Paper Scissors</a></h2>
-              <img class="image-embed" src="../02-month-in-review/images/day45_rpsGUI.jpg" alt="rock paper scissors game with medieval knight theme">
+              <img class="image-embed" src="02-month-in-review/images/day45_rpsGUI.jpg" alt="rock paper scissors game with medieval knight theme">
               <p class="single-space live-link"><a target="_blank" href="https://mattxmade.github.io/odin-rock-paper-scissors/">Live via GitHub</a></p>
               
               <p class="half-space">My idea for the Rock Paper Scissors GUI was for it to look like a tabletop game. The player would have a set of moves and the computer opponent
@@ -132,7 +132,7 @@
               elements to new positions.</p>
 
               <h2 id="eas" class="jump-target" ><a href="#eas">Etch-a-Sketch</a></h2>
-              <img class="image-embed" src="../02-month-in-review/images/day55_etch.jpg" alt="etch-a-sketch toy, menu and colour picker">
+              <img class="image-embed" src="02-month-in-review/images/day55_etch.jpg" alt="etch-a-sketch toy, menu and colour picker">
               <p class="single-space live-link"><a target="_blank" href="https://mattxmade.github.io/odin-etch-a-sketch/etch-a-sketch.html">Live via GitHub</a></p>
               
               <p class="single-space">Around the 15th I started working on the next Odin project which was to build an Etch-a-Sketch. The task was to create a grid of cells, allowing
