Added underline class to comment section

--- a/02-feb-2022.html
+++ b/02-feb-2022.html
@@ -245,7 +245,7 @@
           </ul>
 
           <p class="comment-text">
-            P.S. This month's blog style references this reddit <a href="https://www.reddit.com/r/raspberry_pi/comments/sdnly5/i_built_a_cyberdeck_now_i_need_to_figure_out_how/">post</a>
+            P.S. This month's blog style references this reddit <a href="https://www.reddit.com/r/raspberry_pi/comments/sdnly5/i_built_a_cyberdeck_now_i_need_to_figure_out_how/"><span class="underline">post</span></a>
           <span><i class="fa fa-smile-o" aria-hidden="true"></i></p>
 
           <ul class="comment-info-bar">
