--- a/02-feb-2022.html
+++ b/02-feb-2022.html
@@ -124,7 +124,7 @@
               
               <p class="half-space">My idea for the Rock Paper Scissors GUI was for it to look like a tabletop game. The player would have a set of moves and the computer opponent
               would have a mystery move which would then be their respective card plays. Juggling all the moving parts was alittle intimidating at first and
-              there was a few occasions I thought I'd never finish but because I knew I had to tweet, publish and continue learning, I decided to deleiever the project
+              there was a few occasions I thought I'd never finish but because I knew I had to tweet, publish and continue learning, I decided to deliver the project
               unfinished but almost complete. I very glad I did this as I've learnt building without feedback is the wrong approach, at least for me anyway.</p>
 
               <p class="double-space">After this project I was alot more comfortable using JavaScript and my DOM manipluation had come on leaps and bounds. The muscle memory
